--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,32 +2,79 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+.font_custom {
+  font-family: "Zen Maru Gothic", serif;
+  font-weight: 400;
+  font-style: normal;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+
+
+#top {
+  animation: down 25s infinite;
+}
+
+@keyframes down {
+  0%, 100% {
+    top: -60vh;
+  }
+  50% {
+    top: 240vh;
   }
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+#down {
+  animation: up 15s infinite;
 }
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
+@keyframes up {
+  0%, 100% {
+    left: -60vh;
   }
+  50% {
+    left: 60vh;
+  }
+}
+
+#right {
+  animation: right 20s infinite;
+}
+
+@keyframes right {
+  0%, 100% {
+    right: -60vh;
+  }
+  50% {
+    right: 180vh;
+  }
+}
+
+#left {
+  animation: left 10s infinite;
+}
+
+@keyframes left {
+  0%, 100% {
+    left: 300vh;
+  }
+  50% {
+    left: 60vh;
+  }
+}
+
+
+@keyframes float {
+  0% {
+    transform: translateY(0);
+  }
+  50% {
+    transform: translateY(-1.5rem);
+  }
+  100% {
+    transform: translateY(0);
+  }
+}
+
+.floating {
+  animation: float 4s ease-in-out infinite;
 }
